--- a/CSS-Excercises/styles.css
+++ b/CSS-Excercises/styles.css
@@ -2,5 +2,18 @@ h1 {
     color:blue;
 }
 p {
+    color:red;font-size:24px;
+}
+
+#id1 {
+    color:blue;
+    font-family: Verdana
+}
+.center {
+    text-align: center;
     color:red;
+}
+.bluev p {
+    color:blue;
+    font-family: Verdana
 }
