--- a/project/layoutc3.css
+++ b/project/layoutc3.css
@@ -8,7 +8,7 @@ body {
 
 /* Style the header */
 .header {
-    background-color: #f1f1f1;
+    background-color: lightblue;
     padding: 20px;
     text-align: center;
 }
@@ -16,7 +16,7 @@ body {
 /* Style the top navigation bar */
 .topnav {
     overflow: hidden;
-    background-color: #333;
+    background-color: purple;
 }
 
 /* Style the topnav links */
@@ -37,7 +37,7 @@ body {
 
 /* indicate active page on nav */
 .active {
-    background-color: #4CAF50;
+    background-color: green;
 }
 
 /* A - Create three unequal columns that floats next to each other */
@@ -72,6 +72,6 @@ body {
 
 /* Style the footer */
 .footer {
-    background-color: #f1f1f1;
+    background-color: lightblue;
     padding: 10px;
     text-align: center;
